# BMS

./: .gitignore  PHASES.md  README.md
.azure/: azure-pipelines.yml
.github/workflows/: ci.yml  deploy-dashboard.yml
Designs/: Costly Design.md  Digital Twin.md  Free Design.md  Future Improvements.md  Market.md
api/: EdgeMonitor.Api.sln
api/EdgeMonitor.Api/: Dockerfile  EdgeMonitor.Api.csproj  Program.cs  appsettings.Development.json  appsettings.Production.json  appsettings.json
api/EdgeMonitor.Api.Tests/: AlertEvaluationTests.cs  ControlServiceTests.cs  EdgeMonitor.Api.Tests.csproj  TelemetryServiceTests.cs  TestHelpers.cs  TwinTests.cs
dashboard/: EdgeMonitor.Dashboard.sln
deployment/: edge-deployment.json
docs/: architecture.md  bacnet-integration.md  cost-model.md  digital-twin.md  local-dev-setup.md
edge/: CMakeLists.txt  Dockerfile  building.json  module.json
edge/src/: AlarmMonitor.cpp  AlarmMonitor.h  BACnetActuator.cpp  BACnetActuator.h  BACnetSensorReader.cpp  BACnetSensorReader.h  BuildingModel.cpp  BuildingModel.h  BuildingSimulation.cpp  BuildingSimulation.h  CommandListener.cpp  CommandListener.h  Engine.cpp  Engine.h  EventBus.cpp  EventBus.h  IDeviceActuator.h  ISensorReader.h  Optimizer.cpp  Optimizer.h  Scheduler.cpp  Scheduler.h  SimulatedSensorReader.cpp  SimulatedSensorReader.h  SpscRing.h  TelemetryBatch.cpp  TelemetryBatch.h  TelemetryPublisher.cpp  TelemetryPublisher.h  ZoneController.cpp  ZoneController.h  ZoneStateMachine.cpp  ZoneStateMachine.h  main.cpp
infra/: main.bicep  parameters.json
(+45 files in other folders)
